Rebuild backend with Spring Boot and FastAPI